# whabot

./: README.md  constants.py  constants.yaml  constraint_equation.py  eom.py  export_sdf.sh  setup.sh  stair_climb_brute_force.py  stair_climb_dirtran.py  stair_climb_traj_opt.py  test_eom.py  visualize.py
cpp/: CMakeLists.txt  ConstraintForce.cpp  ConstraintForce.hpp  ConstraintForce_py.cpp
res/: constants.yaml  robot_reduced.rsdf  robot_reduced.sdf  stair_climb.rsdf  stair_climb.sdf
